<resources>
    <string name="app_name">MyNews</string>
    <string name="image_des">image</string>
    <string name="skip_text">Skip</string>
    <string name="enter_mobile_text">Enter Mobile Number</string>
    <string name="please_enter_text">Please enter the number, we\'ll send you an\nOTP code there</string>
    <string name="mobile_text">Mobile Number</string>
    <string name="enter_number">Enter Number</string>
    <string name="get_otp">Get Otp</string>
    <string name="or_text">Or</string>
    <string name="google_text">Continue with Google</string>
    <string name="facebook_text">Continue with Facebook</string>
    <string name="image_desc">image</string>
    <string name="enter_otp_cod">Enter the 6-digit OTP code</string>
    <string name="chek_message">Check your SMS message. We’ve sent you the </string>
    <string name="code_at">code at</string>
    <string name="number_at">(+91) %1$s</string>
    <string name="continue_button">Continue</string>
    <string name="not_receive">Didn’t you receive any code?</string>
    <string name="send_code">Re-Send Code</string>
    <string name="otp_hint">.</string>
    <string name="otp_hint1">1</string>
    <string name="otp_timer">30 Second</string>
    <string name="otp_timer1">%1$d Second</string>
    <string name="number_verified">Number successfully verified</string>
    <string name="full_name">Enter Your Full Name</string>
    <string name="appear_text">This will appear on your PINEWZ profile</string>
    <string name="display_text">Display Name</string>
    <string name="eg_text">e.g Arun Singh</string>
    <string name="verified_text">Verified</string>
    <string name="close_text">Close</string>
    <string name="otp_dec_text">OTP digit 6</string>
    <string name="welcome_text">Welcome to "Arun Singh"</string>
    <string name="profile_text">Your profile is all set.Let\'s explore what\'s</string>
    <string name="happening_text">happening around you</string>
    <string name="explore_button">Explore Your Area News</string>
    <string name="profile_image">Profile Image</string>
    <string name="follow_text">Follow</string>
    <string name="home_time_text">.2h ago</string>
    <string name="home_heading_text">कांग्रेस CEC ने करीब 40 उम्मीदवारों के नाम पर लगाई मुहर, जल्द आएगी पहली सूची</string>
    <string name="home_state">नोएडा उत्तर प्रदेश:</string>
    <string name="home_state_news">कांग्रेस की केंद्रीय चुनाव समिति (सीईसी) ने लोकसभा चुनाव के लिए …</string>
    <string name="pine_code_text">110044</string>
    <string name="state_text">Meerut,Uttar Pradesh</string>
    <string name="news_creator">Become a News Creator</string>
    <string name="home_text">Home</string>
    <string name="web_text">Web Stories</string>
    <string name="plus_text"> </string>
    <string name="notification_text">Notification</string>
    <string name="profile_home_text">Profile</string>
    <string name="vote_text">आपका वोट:</string>
    <string name="vote_sub_text">भोपाल में बिना कलावा, तिलक, गौमूत्र पिए गरबा पंडाल में एंट्री नहीं। हिंदू संगठन की इस मांग पर आप क्या कहेंगे।</string>
    <string name="a_text">A</string>
    <string name="b_text">B</string>
    <string name="correct_text">सही मांग है</string>
    <string name="wrong_text">गलत है</string>
    <string name="correct_vote_per">88.5%</string>
    <string name="wrong_vote_per">10.5%</string>
    <string name="vote_count">14 votes</string>
    <string name="time_left">8 h 37 m left</string>
    <string name="profile">Profile</string>
    <string name="profile_button_text">G</string>
    <string name="guest_profile">Guest Profile</string>
    <string name="no_longer">You are not logged In user</string>
    <string name="profile_login">Login</string>
    <string name="app_preference">App Preferences</string>
    <string name="video_play">Video Auto Play</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="support">Support</string>
    <string name="about">About us</string>
    <string name="terms">Terms &amp; Conditions</string>
    <string name="help_support">Help &amp; Support</string>
    <string name="your_choice">Your local stories, Your voice</string>
    <string name="notification">Notification</string>
    <string name="not_notification">Not Notification Yet!</string>
    <string name="notification_detail">You\'ll see the latest updates and breaking news \nfrom your area right here.</string>
    <string name="here_what">Here\'s what you\'ll get as a Creator.</string>
    <string name="get_work">Get work experience in mainstream media \n practices</string>
    <string name="get_direct">Get direct exposure to pan-India and global \n audience</string>
    <string name="grow">Grow with us,earn with us</string>
    <string name="join_creator">Join as News Creator</string>
    <string name="term_condition">By clicking you agree to our Terms &amp; Condition and \n Privacy Policy.</string>
    <string name="view_all">View All</string>
    <string name="image_text">दशहरा, जिसे विजयादशमी भी कहते हैं, भारत का एक प्रमुख हिंदू त्योहार है जो नवरात्रि के बाद मनाया</string>

</resources>