<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.WelcomeFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/welcome_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="80dp"
            android:contentDescription="@string/image_des"
            android:src="@drawable/welcome_screen"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/welcome_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/welcome_text"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/welcome_image"
            app:layout_constraintStart_toEndOf="@+id/welcome_image"
            app:layout_constraintTop_toTopOf="@+id/welcome_image" />

        <LinearLayout
            android:id="@+id/welcome_container_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical"
            android:gravity="center_vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/welcome_image"
            app:layout_constraintTop_toBottomOf="@+id/welcome_image">

            <TextView
                android:id="@+id/your_profile_text"
                android:layout_width="match_parent"
                android:text="@string/profile_text"
                android:textColor="@color/dark_grey"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/happening_text"
                android:layout_width="match_parent"
                android:layout_marginTop="8dp"
                android:text="@string/happening_text"
                android:textColor="@color/dark_grey"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textSize="16sp"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/explore_button"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:background="@drawable/button_selector"
            android:layout_marginTop="64dp"
            android:textColor="@color/white"
            android:enabled="false"
            android:textAllCaps="false"
            android:textSize="24sp"
            android:text="@string/explore_button"
            app:layout_constraintEnd_toEndOf="@+id/welcome_container_text"
            app:layout_constraintStart_toStartOf="@+id/welcome_container_text"
            app:layout_constraintTop_toBottomOf="@+id/welcome_container_text" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>